Fixed bug and races while log gathering. Added HTTP Hanbdlers for Logs Status and Details
